登录注册页面界面调整 相册图片列表。相册编辑，图片移动。

--- a/.htaccess
+++ b/.htaccess
@@ -3,5 +3,6 @@ RewriteEngine On
 Options +FollowSymLinks
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php?q=$1&%{QUERY_STRING} [L]
+RewriteCond %{REQUEST_URI} ^/(.*)$
+RewriteRule ^ index.php?q=%1&%{QUERY_STRING} [QSA,L]
 </IfModule>
